# VisionCpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakelists.txt  CMakelistsV2.txt  LICENSE  Makefile  README.md  main.cpp
apps/: CMakeLists.txt  CMakelists.txt
apps/benchmark/: CMakeLists.txt  CMakelists.txt  benchmark.cpp  benchmark.hpp
apps/study/: CMakeLists.txt  CMakelists.txt  main.cpp  study.cpp  study.hpp
apps/study/include/study/: coroutines.hpp  eigen3.hpp  openmp.hpp
apps/study/src/: coroutines.cpp  eigen3.cpp  openmp.cpp
apps/training/: CMakelists.txt  main.cpp  training.cpp  training.hpp
cmake/: CompilerFlags.cmake  Dependencies.cmake  Functions.cmake  Utilities.cmake
src/: CMakeLists.txt  CMakelists.txt  image_processing.cpp  image_processing.hpp  macros.hpp  materials.cpp  materials.hpp
src/core/: CMakelists.txt
src/core/base/image_processing/: image_processing.cpp
src/core/include/core/: common.hpp  core.hpp  macros.hpp  multivariate_normal.hpp  tensor.hpp
src/core/src/: common.cpp  multivariate_normal.cpp  tensor.cpp
src/core/utilities/multivariate_normal/: multivariate_normal.cpp  multivariate_normal.hpp
src/datasets/: CMakelists.txt
src/datasets/include/datasets/: datasets.hpp
src/datasets/src/: datasets.cpp
src/detectors/haar_cascade/: haar_cascade.cpp  haar_cascade.hpp
src/detectors/hog/: hog.hpp
src/features/: features.cpp  features.hpp  sift.cpp  sift.hpp
src/filters/blur/: blur.cpp
src/filters/edge_detection/: edge_detection.cpp  edge_detection.hpp
src/filters/sharpen/: sharpen.cpp  sharpen.hpp
src/modules/nn/activation/: activation.cpp
src/modules/nn/layer/: layer.hpp
src/modules/nn/loss/: loss.cpp
src/modules/nn/model/: model.cpp  model.hpp
src/modules/nn/optimizer/: optimizer.cpp  optimizer.hpp
src/modules/nn/prepare/: prepare.cpp
src/modules/preprocessing_image/detectors/haar_cascade/: haar_cascade.cpp  haar_cascade.hpp
src/modules/preprocessing_image/detectors/hog/: hog.cpp  hog.hpp
src/modules/preprocessing_image/features/: features.cpp  features.hpp  sift.cpp  sift.hpp
src/modules/preprocessing_image/filters/blur/: blur.cpp  blur.hpp
src/modules/preprocessing_image/filters/edge_detection/: edge_detection.cpp  edge_detection.hpp
src/modules/preprocessing_image/filters/sharpen/: sharpen.cpp  sharpen.hpp
src/nn/: CMakelists.txt  activation.cpp  activation.hpp  layer.cpp  layer.hpp  loss.cpp  loss.hpp  model.cpp  model.hpp  optimizer.cpp  optimizer.hpp  prepare.cpp  prepare.hpp
src/nn/include/nn/: activation.hpp  early_stopping.hpp  layer.hpp  loss.hpp  model.hpp  optimizer.hpp  prepare.hpp
src/nn/layer/: layer.cpp  layer.hpp
src/nn/model/: model.cpp  model.hpp  model_v2.cpp
src/nn/optimizer/: optimizer.cpp  optimizer.hpp
src/nn/src/: activation.cpp  early_stopping.cpp  layer.cpp  loss.cpp  model.cpp  model_v2.cpp  optimizer.cpp  prepare.cpp
src/preprocessing/: CMakeLists.txt
src/preprocessing/include/preprocessing/: preprocessing.hpp
src/preprocessing/src/: preprocessing.cpp
src/processing/: CMakeLists.txt
src/processing/include/processing/: detections.hpp  features.hpp  filters.hpp  operators.hpp  processing.hpp  thresholding.hpp  transformations.hpp
src/processing/src/: detections.cpp  features.cpp  filters.cpp  operators.cpp  thresholding.cpp  transformations.cpp
src/processing/src/detections/: detections.cpp  haarcascade.cpp  hog.cpp
src/processing/src/features/: features.cpp  orb.cpp  sift.cpp
src/study/eigen3/: eigen3.cpp
src/tensor/: tensor.cpp  tensor.hpp
src/thresholding/: thresholding.cpp  thresholding.hpp
src/utilities/multivariate_normal/: multivariate_normal.cpp  multivariate_normal.hpp
src/vision/: CMakelists.txt
src/vision/include/vision/: image.hpp
tests/: CMakelists.txt
tests/nn/: CMakeLists.txt  CMakelists.txt  main.cpp
